feat(inputSsearch): custome home page

--- a/src/locales/fr/traduction.json
+++ b/src/locales/fr/traduction.json
@@ -38,7 +38,7 @@
         "masquer": "Masquer"
     },
     "footer": {
-        "title": "L'appli qui facilite la lecture",
+        "title": "Les meilleurs resto halal autour de vous",
         "copyrights": "© Copyrights 2021 AlphaB All rights reserved.",
         "accueil": "Accueil",
         "outils": "Outils",
